# fabrica

./: .gitignore  Cargo.toml  README.md  SPEC.md  fabrica.example.toml
docs/user-guide/: README.md
src/: bot.rs  config.rs  lib.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs
src/modules/: github.rs  mod.rs  plane.rs  status.rs  translation.rs
src/services/: mod.rs  translator.rs
src/webhooks/: mod.rs  server.rs
